2015-03-23  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Makefile.am: Do not run the gnutar installcheck

2015-03-20  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Status.pm: Improve documentation.

2015-03-19  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Fix double g_mutex_unlock.

2015-03-17  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amindexd.c: Fix LISTHOST command.

2015-03-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/tapefile.c (compute_storage_retention): Fix retentionfor
	  retention_days.
	* installcheck/Amanda_Tapelist.pl: Add many installcheck for
	  list_retention, list_no_retention, list_new_tapes and
	  volume_is_reusable

2015-03-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: One line by worker.

2015-03-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/tapefile.c (list_retention, list_no_retention): Do not
	  list datestamp==0 or not in a listed storage.

2015-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c, perl/Amanda/Policy.pm,
	  perl/Amanda/Taper/Scan.pm,
	  server-src/tapefile.c: retention_tapes default to tapecycle-1.
	* man/xml-source/amanda.conf.5.xml: Document it.
	* installcheck/Amanda_Taper_Scan.pl,
	  installcheck/Amanda_Taper_Scan_lexical.pl,
	  installcheck/Amanda_Taper_Scan_oldest.pl,
	  installcheck/Amanda_Taper_Scan_traditional.pl: Fix.

2015-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/tapefile.c (list_retention, list_no_retention): Fix.

2015-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Config.pl: Fix: Remove append keyword.

2015-03-04  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Fix parsing dump-selection (remove append).
	* man/xml-source/amanda.conf.5.xml: Document change.

2015-02-26  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c (config_print_errors_as_message): Fix message.
